--- a/wp-content/themes/woo-angular/style.css
+++ b/wp-content/themes/woo-angular/style.css
@@ -1,5 +1,5 @@
 /*
-    Theme Name: Woo Angular
+    Theme Name: SITENAME (Wordpress + WooCommerce + Angular)
     Author: John Ericta
     Description: 
     Version: 0.0.1  
